# music-player

./: .gitignore  Cargo.toml  Makefile.toml  NOTES.md  README.md  notes.md  rustfmt.toml  schema.db
librarian/: Cargo.toml  Migrant.toml  build.rs  cbindgen.toml  librarian-rs.h  librarian.db  rustfmt.toml
librarian/migrations/: 20201106041810_init.sql
librarian/migrations/20201015044335_init/: down.sql  up.sql
librarian/src/: lib.rs  models.rs  parse.rs  playback.rs  userconfig.rs
ui-gtk/: .gitignore  Cargo.toml
ui-gtk/src/: events.rs  header.rs  main.rs  track_list.rs
ui-macos/: ui-bridging-header.h
ui-macos/music-player-ui/: AppDelegate.swift  ContentView.swift  Info.plist
ui-macos/music-player-ui.xcodeproj/: project.pbxproj
ui-macos/music-player-ui.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ui-macos/music-player-ui/Base.lproj/: Main.storyboard
