[package]
name = "librarian"
version = "0.1.0"
authors = ["Julien Tregoat <jules@jules.nyc>"]
edition = "2018"

[lib]
name = 'librarian'

[dependencies]
tokio = {version = "1.0.1", features = ["fs", "sync"]}
sqlx = {version = "0.4.2", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "chrono", "macros", "migrate"]}
claxon = "0.4.3"
futures = "0.3.8"
chrono = "0.4"
hound = "3.4.0"
rtag = "0.3.5"
log = "0.4.11"
minimp3 = "0.5.0" # TODO use tokio async feature?
aiff = {git = "https://github.com/julientregoat/aiff-rs.git"}
# cpal = {path = "../../cpal"}
cpal = {git = "https://github.com/julientregoat/cpal.git", branch = "24bit"}
# num-traits = "0.2.14"
directories-next = "2.0.0"
toml = "0.5.8"
serde = "1.0.118"
serde_derive = "1.0.118"

[dev-dependencies]