[package]
authors = ["Julien Tregoat <jules@jules.nyc>"]
edition = "2018"
name = "librarian"
version = "0.1.0"

[lib]
name = 'librarian'

[dependencies]
aiff = {git = "https://github.com/julientregoat/aiff-rs.git"} 
chrono = "0.4" 
claxon = "0.4.3" 
futures = "0.3.12" 
hound = "3.4.0" 
log = "0.4.13" 
minimp3 = "0.5.1" # TODO use tokio async feature?
rtag = "0.3.5" 
sqlx = {version = "0.4.2", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "chrono", "macros", "migrate"]} 
tokio = {version = "1.0.2", features = ["fs", "sync"]} 
tokio-stream = "0.1.2" 
# cpal = {path = "../../cpal"}
cpal = {git = "https://github.com/julientregoat/cpal.git", branch = "24bit"}
# num-traits = "0.2.14"
directories-next = "2.0.0"
serde = "1.0.119"
serde_derive = "1.0.119"
toml = "0.5.8"

[dev-dependencies]
