[package]
name = "ui-gtk"
version = "0.1.0"
authors = ["Julien Tregoat <jules@jules.nyc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.3.4", features = ["rt-multi-thread", "macros", "sync"]}
gtk = {version = "0.9.2", features = ["v3_24"]}
gio = {version = "0.9.1", features = ["v2_58"]}
glib = {version = "0.10.3", features = ["v2_58"]}
librarian = { path = "../librarian" }
# env_logger = "0.8.2"
log4rs = "0.13.0"
dotenv = "0.15.0"
log = "0.4.11"

# needed for sqlx until it updates its tokio dep to 0.3.0
tokio-compat-02 = "0.1.2"

# used with cargo-run-script
[package.metadata.scripts]
run = "RUST_LOG=ui_gtk,librarian cargo run"
watch = "RUST_LOG=ui_gtk,librarian cargo watch -x run"
buildwin = "RUST_LOG=ui_gtk,librarian PKG_CONFIG=mingw64-pkg-config cargo build --target x86_64-pc-windows-gnu"