[package]
authors = ["Julien Tregoat <jules@jules.nyc>"]
edition = "2018"
name = "ui-gtk"
version = "0.1.0"

[dependencies]
gio = {version = "0.9.1", features = ["v2_58"]}
glib = {version = "0.10.3", features = ["v2_58"]}
gtk = {version = "0.9.2", features = ["v3_24"]}
librarian = {path = "../librarian"}
log = "0.4.13"
log4rs = "1.0.0"
tokio = {version = "1.0.2", features = ["rt-multi-thread", "macros", "sync"]}

# needed for sqlx until it updates its tokio dep to 0.3.0
tokio-compat-02 = "0.1.2"
